# gdnative-bootstrap

./: example.json  main.py
files/: CMakeLists.txt  Game.h  HUD.cpp  HUD.gdns  HUD.h  TestGame.cpp  gdlibrary.cpp  gitignore  native.gdnlib
